# blesite

./: .gitignore  PLAN.md  README.md  SPEC.md  TODO.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/blesite/blesite/: MainActivity.kt
docs/: PLAN.md  SPEC.md  TODO.md
integration_test/: simple_test.dart
lib/: main.dart
lib/src/rust/: frb_generated.dart
rust/: Cargo.toml
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: blesite_core.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: blesite_core.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
